Continues to make a clearer distinction between database ingest/retrieval and in-memory ingest/retrieval.
Refs #99811